--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -13,78 +13,59 @@ body {
   align-items: stretch;
 }
 
-
-header{
-  display: flex;  
+header {
+  display: flex;
   align-items: center;
-  justify-content: space-between;   
+  justify-content: space-between;
 }
 
-header h1 {  
+header h1 {
+  color: transparent;
   text-align: center;
   font-size: 8vh;
   font-family: Hack, sans-serif;
-  text-transform: uppercase;
-  background: linear-gradient(80deg, #fff, #9b59b6, #44045e, #9b59b6, #fff);  
+  background: linear-gradient(800deg, #9b59b6, rgb(8, 12, 238), #9b59b6);
   -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-repeat: no-repeat;
   background-size: 80%;
-  animation: shine 5s linear infinite;  
-  
+  animation: shine 5s linear infinite;
 }
 
-#nome {  
+#nome {
+  color: transparent;
   text-align: center;
   font-size: 5vh;
   font-family: Hack, sans-serif;
-  text-transform: uppercase;
-  background: linear-gradient(80deg, #fff, #9b59b6, #44045e, #9b59b6, #fff);  
+  background: linear-gradient(800deg, #9b59b6, #3498db, #9b59b6);
   -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-repeat: no-repeat;
   background-size: 80%;
-  animation: shine 5s linear infinite;  
-  
+  animation: shine 5s linear infinite;
 }
 
-#rota {  
+#rota {
+  color: transparent;
   text-align: center;
   font-size: 5vh;
   font-family: Hack, sans-serif;
-  text-transform: uppercase;
-  background: linear-gradient(80deg, #fff, #9b59b6, #44045e, #9b59b6, #fff);  
+  background: linear-gradient(800deg, #9b59b6, #3482db, #9b59b6);
   -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-repeat: no-repeat;
   background-size: 80%;
-  animation: shine 5s linear infinite;  
-  
+  animation: shine 5s linear infinite;
 }
 
 @keyframes shine {
   0% {
     background-position-x: -500%;
-    text-shadow: 5px 5px #9b59b6;
   }
-
   100% {
     background-position-x: 500%;
-    
   }
 }
-
-
 
 main {
   display: flex;
   margin-top: 2vh;
   justify-content: center;
   gap: 20vw;
-  
 }
 
 footer {
@@ -92,7 +73,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 2vh;  
+  margin-top: 2vh;
 }
 
 #img-logo {
@@ -104,45 +85,50 @@ footer {
   margin-top: 2vh;
 }
 
-.container_selection {    
+.container_selection {
   display: flex;
   justify-content: center;
-  align-items: center;
-  border-left: 150px solid transparent;
-  border-right: 150px solid transparent;    
+  align-items: center;  
   max-height: 60vh;
 }
 
-.container_champ_nomes {  
+.container_champ_nomes {
   position: relative;
   max-width: 225vw;
   max-height: 65vh;
   text-align: center;
   font-size: 3vh;
   font-size: 1.8vw;
-  
 }
 
-.container_setas {  
+.container_setas {
   position: absolute;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   display: flex;
   gap: 400px;
-  
 }
 
-#imagem { 
+#imagem {
   width: 21vw;
   height: 65vh;
-  /* max-width: 21vw;
-  max-height: 65vh; */
 }
 
 .center-con1 {
   display: flex;
   position: relative;
+}
+
+.third {
+  border-color: #3498db;
+  color: #fff;
+  box-shadow: 0 0 40px 40px #3498db inset, 0 0 0 0 #3498db;
+  -webkit-transition: all 150ms ease-in-out;
+  transition: all 150ms ease-in-out;
+}
+.third:hover {
+  box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
 }
 
 .round1 {
@@ -158,6 +144,7 @@ footer {
 
 .round1:hover {
   border: 4px solid #fff;
+  box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
 }
 
 .round1 span {
@@ -235,6 +222,7 @@ footer {
 
 .round2:hover {
   border: 4px solid #fff;
+  box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
 }
 
 .round2 span {
@@ -294,44 +282,59 @@ footer {
   transform: rotate(45deg);
 }
 
-.teclado_video{
+.teclado_video {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 10px;
 }
 
-.teclado_top{
-  display: flex;  
+.teclado_top {
+  display: flex;
   justify-content: center;
-  height: 10vh;  
 }
-.teclado_top img{  
-  width: 5vw;
+.teclado_top img {
+  max-width: 100%;
+  max-height: 10vh;
+  min-width: auto;
+  min-height: auto;
   cursor: pointer;
-  
+  border-radius: 10%;
+
+  height: 10vh;
 }
 
-.teclado_bot{
+.teclado_top img:hover {
+  box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
+}
+
+.teclado_bot {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 10px;
-  height: 10vh;  
 }
 
-.teclado_bot img{  
-  width: 5vw;
-  cursor: pointer;  
+.teclado_bot img {
+  max-width: 100%;
+  max-height: 10vh;
+  min-width: auto;
+  min-height: auto;
+  cursor: pointer;
+  border-radius: 10%;
+
+  height: 10vh;
 }
 
+.teclado_bot img:hover {
+  box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
+}
 
-.video-responsive { 
+.video-responsive {
   max-width: 50vw;
   min-width: auto;
   max-height: 45vh;
   min-height: auto;
-  
 }
 
 .container_footer {
@@ -339,9 +342,9 @@ footer {
   bottom: 20px;
 }
 
-#rodape{
-  color: #fff;  
-  font-family: 'Raleway', sans-serif;  
+#rodape {
+  color: #fff;
+  font-family: 'Raleway', sans-serif;
   bottom: 1px;
   position: absolute;
 }
