--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -24,7 +24,8 @@ header h1 {
   text-align: center;
   font-size: 8vh;
   font-family: Hack, sans-serif;
-  background: linear-gradient(800deg, #9b59b6, rgb(8, 12, 238), #9b59b6);
+  /* background: linear-gradient(800deg, #920505, #800303, #460202, #a70303, #ac0303); */
+  background: linear-gradient(800deg, rgba(228, 3, 3), rgba(255, 140, 0), rgba(255, 237, 0), rgba(0, 128, 38), rgba(0, 77, 255), rgba(117, 7, 255));
   -webkit-background-clip: text;
   background-size: 80%;
   animation: shine 5s linear infinite;
@@ -64,7 +65,9 @@ header h1 {
 main {
   display: flex;
   margin-top: 2vh;
-  justify-content: center;
+  margin-left: 2vh;
+  margin-right: 2vh;
+  justify-content: space-between;
   gap: 20vw;
 }
 
@@ -86,28 +89,33 @@ footer {
 }
 
 .container_selection {
-  display: flex;
+  display: grid;
   justify-content: center;
-  align-items: center;  
-  max-height: 60vh;
+  align-items: center;
+  max-height: 80vh;
 }
 
 .container_champ_nomes {
   position: relative;
   max-width: 225vw;
-  max-height: 65vh;
+  max-height: 80vh;
   text-align: center;
   font-size: 3vh;
   font-size: 1.8vw;
+  margin-left: 20vh;
 }
 
 .container_setas {
+  max-width: 100%;
+  min-width: auto;
+  max-height: 20vh;
+  min-height: auto;
   position: absolute;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   display: flex;
-  gap: 400px;
+  gap: 30vw;
 }
 
 #imagem {
@@ -116,27 +124,20 @@ footer {
 }
 
 .center-con1 {
+  max-width: 100%;
+  min-width: auto;
+  max-height: 11vh;
+  min-height: auto;
   display: flex;
   position: relative;
-}
-
-.third {
-  border-color: #3498db;
-  color: #fff;
-  box-shadow: 0 0 40px 40px #3498db inset, 0 0 0 0 #3498db;
-  -webkit-transition: all 150ms ease-in-out;
-  transition: all 150ms ease-in-out;
-}
-.third:hover {
-  box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
 }
 
 .round1 {
   display: flex;
   position: relative;
   border: 4px solid #9b59b6;
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   border-radius: 100%;
   cursor: pointer;
   background-color: transparent;
@@ -207,14 +208,18 @@ footer {
 .center-con2 {
   display: flex;
   position: relative;
+  max-width: 100%;
+  min-width: auto;
+  max-height: 11vh;
+  min-height: auto;
 }
 
 .round2 {
   display: flex;
   position: relative;
   border: 4px solid #9b59b6;
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   border-radius: 100%;
   cursor: pointer;
   background-color: transparent;
@@ -283,6 +288,7 @@ footer {
 }
 
 .teclado_video {
+  margin-right: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -300,8 +306,12 @@ footer {
   min-height: auto;
   cursor: pointer;
   border-radius: 10%;
-
   height: 10vh;
+
+  background: linear-gradient(800deg, rgba(228, 3, 3), rgba(255, 140, 0), rgba(255, 237, 0), rgba(0, 128, 38), rgba(117, 7, 255));
+  -webkit-background-clip: solid;
+  background-size: 80%;
+  animation: shine2 5s linear infinite;
 }
 
 .teclado_top img:hover {
@@ -322,8 +332,21 @@ footer {
   min-height: auto;
   cursor: pointer;
   border-radius: 10%;
-
   height: 10vh;
+
+  background: linear-gradient(800deg, rgba(228, 3, 3), rgba(255, 140, 0), rgba(255, 237, 0), rgba(0, 128, 38), rgba(117, 7, 255));
+  -webkit-background-clip: solid;
+  background-size: 80%;
+  animation: shine2 5s linear infinite;
+}
+
+@keyframes shine2 {
+  0% {
+    background-position-x: -500%;
+  }
+  100% {
+    background-position-x: 500%;
+  }
 }
 
 .teclado_bot img:hover {
@@ -331,7 +354,7 @@ footer {
 }
 
 .video-responsive {
-  max-width: 50vw;
+  max-width: 100%;
   min-width: auto;
   max-height: 45vh;
   min-height: auto;
@@ -348,3 +371,24 @@ footer {
   bottom: 1px;
   position: absolute;
 }
+
+/* header h1 {
+  color: transparent;
+  text-align: center;
+  font-size: 8vh;
+  font-family: Hack, sans-serif;
+  
+  background: linear-gradient(800deg, rgba(228 , 3, 3),rgba(255, 140, 0), rgba(255, 237, 0), rgba(0, 128, 38), rgba(0, 77, 255), rgba(117, 7, 255));
+  -webkit-background-clip: text;
+  background-size: 80%;
+  animation: shine 5s linear infinite;
+} */
+
+/* @keyframes shine {
+  0% {
+    background-position-x: -500%;
+  }
+  100% {
+    background-position-x: 500%;
+  }
+} */
