--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -14,8 +14,7 @@ body {
 }
 
 header {
-  display: flex;
-  align-items: center;
+  display: flex;  
   justify-content: space-between;
 }
 
@@ -24,7 +23,6 @@ header h1 {
   text-align: center;
   font-size: 8vh;
   font-family: Hack, sans-serif;
-  /* background: linear-gradient(800deg, #920505, #800303, #460202, #a70303, #ac0303); */
   background: linear-gradient(800deg, rgba(228, 3, 3), rgba(255, 140, 0), rgba(255, 237, 0), rgba(0, 128, 38), rgba(0, 77, 255), rgba(117, 7, 255));
   -webkit-background-clip: text;
   background-size: 80%;
@@ -64,7 +62,7 @@ header h1 {
 
 main {
   display: flex;
-  margin-top: 2vh;
+  
   margin-left: 2vw;
   margin-right: 2vw;
   justify-content: space-between;
@@ -76,29 +74,23 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 2vh;
+  
 }
 
 #img-logo {
-  max-width: 15vw;
-  min-width: auto;
-  max-height: 15vh;
-  min-height: auto;
-  margin-left: 2vw;
-  margin-top: 2vh;
+  max-width: 300px;
+  margin-left: 2px;
+  margin-top: 2px;
 }
 
 .container_selection {
   display: grid;
   justify-content: center;
   align-items: center;
-  max-height: 80vh;
 }
 
 .container_champ_nomes {
   position: relative;
-  max-width: 225vw;
-  max-height: 80vh;
   text-align: center;
   font-size: 3vh;
   font-size: 1.8vw;
@@ -119,8 +111,9 @@ footer {
 }
 
 #imagem {
-  width: 21vw;
-  height: 65vh;
+  max-height: 65vh;
+  max-width: 24vw;
+
   -webkit-filter: drop-shadow(5px 5px 5px #fff);
   filter: drop-shadow(1px 3px 8px rgb(0, 0, 0));
   animation: anim-stars 20s infinite;
@@ -303,7 +296,6 @@ footer {
 }
 
 .teclado_video {
-  margin-right: 20vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -371,7 +363,7 @@ footer {
 .video-responsive {
   max-width: 100%;
   min-width: auto;
-  max-height: 45vh;
+  max-height: 55vh;
   min-height: auto;
 }
 
@@ -388,397 +380,46 @@ footer {
 }
 
 @media (max-width: 999px) {
-  * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-  }
-
   body {
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: url('../Image/background/background-image_02.jpg');
     background-repeat: repeat;
-    align-items: stretch;
   }
 
   header {
-    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
   }
 
   header h1 {
-    color: transparent;
-    text-align: center;
-    font-size: 8vh;
-    font-family: Hack, sans-serif;    
-    background: linear-gradient(800deg, rgba(228, 3, 3), rgba(255, 140, 0), rgba(255, 237, 0), rgba(0, 128, 38), rgba(0, 77, 255), rgba(117, 7, 255));
-    -webkit-background-clip: text;
-    background-size: 80%;
-    animation: shine 5s linear infinite;
-  }
-
-  #nome {
-    color: transparent;
-    text-align: center;
-    font-size: 5vh;
-    font-family: Hack, sans-serif;
-    background: linear-gradient(800deg, #9b59b6, #3498db, #9b59b6);
-    -webkit-background-clip: text;
-    background-size: 80%;
-    animation: shine 5s linear infinite;
-  }
-
-  #rota {
-    color: transparent;
-    text-align: center;
-    font-size: 5vh;
-    font-family: Hack, sans-serif;
-    background: linear-gradient(800deg, #9b59b6, #3482db, #9b59b6);
-    -webkit-background-clip: text;
-    background-size: 80%;
-    animation: shine 5s linear infinite;
-  }
-
-  @keyframes shine {
-    0% {
-      background-position-x: -500%;
-    }
-    100% {
-      background-position-x: 500%;
-    }
+    font-size: 6vh;
   }
 
   main {
-    
-    display: flex;
     flex-direction: column;
-    margin-top: 2vh;
-    margin-left: 2vw;
-    margin-right: 2vw;
     justify-content: center;
     align-items: center;
     align-content: center;
     gap: 5vh;
   }
 
-  footer {
-    
-    display: flex;    
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2vh;
-  }
-
-  #img-logo {
-    max-width: 15vw;
-    min-width: auto;
-    max-height: 15vh;
-    min-height: auto;
-    margin-left: 2vw;
-    margin-top: 2vh;
-  }
-
   .container_selection {
-    
     display: grid;
     justify-content: center;
     align-items: center;
-    max-height: 80vh;
   }
 
   .container_champ_nomes {
-    position: relative;
-    max-width: 225vw;
-    max-height: 80vh;
-    text-align: center;
-    font-size: 3vh;
-    font-size: 1.8vw;
-    margin-left: 20vh;
+    margin-left: 2vh;
+  }
+
+  #img-logo {
+    max-width: 30vw;
   }
 
   .container_setas {
-    max-width: 100%;
-    min-width: auto;
-    max-height: 20vh;
-    min-height: auto;
-    position: absolute;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    gap: 30vw;
-  }
-
-  #imagem {
-    width: 21vw;
-    height: 65vh;
-    -webkit-filter: drop-shadow(5px 5px 5px #fff);
-    filter: drop-shadow(1px 3px 8px rgb(0, 0, 0));
-    animation: anim-stars 20s infinite;
-  }
-
-  @keyframes anim-stars {
-    0% {
-      transform: translate3d(0px, 0%, 0em);
-    }
-    50% {
-      transform: translate3d(-3px, -2%, -3px);
-    }
-    100% {
-      transform: translate3d(0px, 0%, 0em);
-    }
-  }
-
-  .center-con1 {
-    max-width: 100%;
-    min-width: auto;
-    max-height: 11vh;
-    min-height: auto;
-    display: flex;
-    position: relative;
-  }
-
-  .round1 {
-    display: flex;
-    position: relative;
-    border: 4px solid #9b59b6;
-    width: 120px;
-    height: 120px;
-    border-radius: 100%;
-    cursor: pointer;
-    background-color: transparent;
-  }
-
-  .round1:hover {
-    border: 4px solid #fff;
-    box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
-  }
-
-  .round1 span {
-    z-index: 999;
-    height: 4px;
-    margin: 1px;
-    width: 30px;
-    background: #9b59b6;
-    transition: 0.4s ease;
-  }
-
-  .round1 span:first-child {
-    display: flex;
-    position: absolute;
-    transform: rotate(-45deg);
-    left: 25%;
-    bottom: 35%;
-  }
-
-  .round1 span:nth-child(2) {
-    display: flex;
-    position: absolute;
-    transform: rotate(-45deg);
-    left: 45%;
-    bottom: 35%;
-  }
-
-  .round1 span:nth-child(3) {
-    display: flex;
-    position: absolute;
-    transform: rotate(45deg);
-    left: 25%;
-    bottom: 54%;
-  }
-
-  .round1 span:nth-child(4) {
-    display: flex;
-    position: absolute;
-    transform: rotate(45deg);
-    left: 45%;
-    bottom: 54%;
-  }
-
-  .round1:hover span:nth-child(1) {
-    transform: rotate(45deg);
-  }
-
-  .round1:hover span:nth-child(2) {
-    transform: rotate(45deg);
-  }
-
-  .round1:hover span:nth-child(3) {
-    transform: rotate(-45deg);
-  }
-
-  .round1:hover span:nth-child(4) {
-    transform: rotate(-45deg);
-  }
-
-  .center-con2 {
-    display: flex;
-    position: relative;
-    max-width: 100%;
-    min-width: auto;
-    max-height: 11vh;
-    min-height: auto;
-  }
-
-  .round2 {
-    display: flex;
-    position: relative;
-    border: 4px solid #9b59b6;
-    width: 120px;
-    height: 120px;
-    border-radius: 100%;
-    cursor: pointer;
-    background-color: transparent;
-  }
-
-  .round2:hover {
-    border: 4px solid #fff;
-    box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
-  }
-
-  .round2 span {
-    z-index: 999;
-    height: 4px;
-    margin: 1px;
-    width: 30px;
-    background: #9b59b6;
-    transition: 0.4s ease;
-  }
-
-  .round2 span:first-child {
-    display: flex;
-    position: absolute;
-    transform: rotate(45deg);
-    left: 25%;
-    bottom: 35%;
-  }
-
-  .round2 span:nth-child(2) {
-    display: flex;
-    position: absolute;
-    transform: rotate(45deg);
-    left: 45%;
-    bottom: 35%;
-  }
-
-  .round2 span:nth-child(3) {
-    display: flex;
-    position: absolute;
-    transform: rotate(-45deg);
-    left: 25%;
-    bottom: 54%;
-  }
-
-  .round2 span:nth-child(4) {
-    display: flex;
-    position: absolute;
-    transform: rotate(-45deg);
-    left: 45%;
-    bottom: 54%;
-  }
-
-  .round2:hover span:nth-child(1) {
-    transform: rotate(-45deg);
-  }
-
-  .round2:hover span:nth-child(2) {
-    transform: rotate(-45deg);
-  }
-
-  .round2:hover span:nth-child(3) {
-    transform: rotate(45deg);
-  }
-
-  .round2:hover span:nth-child(4) {
-    transform: rotate(45deg);
-  }
-
-  .teclado_video {
-    margin-right: 2vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-  }
-
-  .teclado_top {
-    display: flex;
-    justify-content: center;
-  }
-  .teclado_top img {
-    max-width: 100%;
-    max-height: 10vh;
-    min-width: auto;
-    min-height: auto;
-    cursor: pointer;
-    border-radius: 10%;
-    height: 10vh;
-    background: linear-gradient(800deg, rgba(228, 3, 3), rgba(255, 140, 0), rgba(255, 237, 0), rgba(0, 128, 38), rgba(117, 7, 255));
-    -webkit-background-clip: solid;
-    background-size: 80%;
-    animation: shine2 5s linear infinite;
-  }
-
-  .teclado_top img:hover {
-    box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
-  }
-
-  .teclado_bot {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 10px;
-  }
-
-  .teclado_bot img {
-    max-width: 100%;
-    max-height: 10vh;
-    min-width: auto;
-    min-height: auto;
-    cursor: pointer;
-    border-radius: 10%;
-    height: 10vh;
-
-    background: linear-gradient(800deg, rgba(228, 3, 3), rgba(255, 140, 0), rgba(255, 237, 0), rgba(0, 128, 38), rgba(117, 7, 255));
-    -webkit-background-clip: solid;
-    background-size: 80%;
-    animation: shine2 5s linear infinite;
-  }
-
-  @keyframes shine2 {
-    0% {
-      background-position-x: -500%;
-    }
-    100% {
-      background-position-x: 500%;
-    }
-  }
-
-  .teclado_bot img:hover {
-    box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
-  }
-
-  .video-responsive {
-    max-width: 100%;
-    min-width: auto;
-    max-height: 45vh;
-    min-height: auto;
+    margin-left: -12vw;
   }
 
   .container_footer {
-    display: flex;   
     bottom: 2px;
-  }
-
-  #rodape {
-    color: #fff;
-    font-family: 'Raleway', sans-serif;
-    bottom: 1px;    
   }
 }
