--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -27,6 +27,8 @@ header h1 {
   -webkit-background-clip: text;
   background-size: 80%;
   animation: shine 5s linear infinite;
+  -webkit-filter: drop-shadow(5px 5px 5px #fff);
+  filter: drop-shadow(1px 3px 8px rgb(0, 0, 0));
 }
 
 #nome {
@@ -38,6 +40,8 @@ header h1 {
   -webkit-background-clip: text;
   background-size: 80%;
   animation: shine 5s linear infinite;
+  -webkit-filter: drop-shadow(5px 5px 5px #fff);
+  filter: drop-shadow(1px 3px 8px rgb(0, 0, 0));
 }
 
 #rota {
@@ -49,6 +53,8 @@ header h1 {
   -webkit-background-clip: text;
   background-size: 80%;
   animation: shine 5s linear infinite;
+  -webkit-filter: drop-shadow(5px 5px 5px #fff);
+  filter: drop-shadow(1px 3px 8px rgb(0, 0, 0));
 }
 
 @keyframes shine {
@@ -81,6 +87,8 @@ footer {
   max-width: 300px;
   margin-left: 2px;
   margin-top: 2px;
+  -webkit-filter: drop-shadow(5px 5px 5px #fff);
+  filter: drop-shadow(2px 5px 8px rgb(0, 0, 0));
 }
 
 .container_selection {
@@ -108,6 +116,7 @@ footer {
   align-items: center;
   display: flex;
   gap: 30vw;
+  
 }
 
 #imagem {
@@ -305,6 +314,8 @@ footer {
 .teclado_top {
   display: flex;
   justify-content: center;
+  -webkit-filter: drop-shadow(5px 5px 5px #fff);
+  filter: drop-shadow(1px 3px 8px rgb(0, 0, 0));
 }
 .teclado_top img {
   max-width: 100%;
@@ -330,6 +341,8 @@ footer {
   flex-direction: row;
   justify-content: center;
   gap: 10px;
+  -webkit-filter: drop-shadow(5px 5px 5px #fff);
+  filter: drop-shadow(1px 3px 8px rgb(0, 0, 0));
 }
 
 .teclado_bot img {
@@ -365,11 +378,15 @@ footer {
   min-width: auto;
   max-height: 55vh;
   min-height: auto;
+  -webkit-filter: drop-shadow(5px 5px 5px #fff);
+  filter: drop-shadow(1px 3px 8px rgb(0, 0, 0));
 }
 
 .container_footer {
   position: flex;
   bottom: 20px;
+  -webkit-filter: drop-shadow(5px 5px 5px #fff);
+  filter: drop-shadow(1px 3px 8px rgb(0, 0, 0));
 }
 
 #rodape {
