--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -21,8 +21,8 @@ header {
 header h1 {
   color: transparent;
   text-align: center;
-  font-size: 8vh;
-  font-family: Hack, sans-serif;
+  font-size: 8vw;
+  font-family: Helvetica;
   background: linear-gradient(800deg, rgba(228, 3, 3), rgba(255, 140, 0), rgba(255, 237, 0), rgba(0, 128, 38), rgba(0, 77, 255), rgba(117, 7, 255));
   -webkit-background-clip: text;
   background-size: 80%;
@@ -33,7 +33,6 @@ header h1 {
 
 #nome {
   color: transparent;
-  text-align: center;
   font-size: 5vh;
   font-family: Hack, sans-serif;
   background: linear-gradient(800deg, #9b59b6, #3498db, #9b59b6);
@@ -46,7 +45,6 @@ header h1 {
 
 #rota {
   color: transparent;
-  text-align: center;
   font-size: 5vh;
   font-family: Hack, sans-serif;
   background: linear-gradient(800deg, #9b59b6, #3482db, #9b59b6);
@@ -68,7 +66,6 @@ header h1 {
 
 main {
   display: flex;
-
   margin-left: 2vw;
   margin-right: 2vw;
   justify-content: space-between;
@@ -84,24 +81,27 @@ footer {
 
 #img-logo {
   max-width: 300px;
-  margin-left: 2px;
-  margin-top: 2px;
+  margin-left: 15px;
+  margin-top: 15px;
   -webkit-filter: drop-shadow(5px 5px 5px #fff);
   filter: drop-shadow(2px 5px 8px rgb(0, 0, 0));
 }
 
 .container_selection {
-  display: grid;
+  display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 8vw;
 }
 
 .container_champ_nomes {
-  position: relative;
+  min-width: 25vw;
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  font-size: 3vh;
+  justify-content: center;
+  align-items: center;
   font-size: 1.8vw;
-  margin-left: 20vh;
 }
 
 .container_setas {
@@ -117,10 +117,9 @@ footer {
   gap: 30vw;
 }
 
-#imagem {  
+#imagem {
   max-height: 65vh;
   max-width: 24vw;
-  margin-left: 50px;
   -webkit-filter: drop-shadow(5px 5px 5px #fff);
   filter: drop-shadow(1px 3px 8px rgb(0, 0, 0));
   animation: anim-stars 20s infinite;
@@ -139,12 +138,12 @@ footer {
 }
 
 .center-con1 {
+  display: flex;
+  position: relative;
   max-width: 100%;
   min-width: auto;
   max-height: 11vh;
   min-height: auto;
-  display: flex;
-  position: relative;
 }
 
 .round1 {
@@ -403,11 +402,7 @@ footer {
     flex-direction: column;
     align-items: center;
   }
-
-  header h1 {
-    font-size: 6vh;
-  }
-
+  
   main {
     flex-direction: column;
     justify-content: center;
@@ -423,7 +418,7 @@ footer {
   }
 
   .container_champ_nomes {
-    margin-left: 2vh;
+    margin-left: 2vw;
   }
 
   #img-logo {
@@ -437,4 +432,24 @@ footer {
   .container_footer {
     bottom: 2px;
   }
+}
+
+@media (max-width: 810px) {
+  .container_champ_nomes {
+    min-width: 35vw;
+  }
+  
+}
+
+@media (max-width: 530px) {
+  .container_champ_nomes {
+    min-width: 45vw;
+  }
+}
+
+@media (max-width: 427px) {
+  .container_champ_nomes {
+    min-width: 65vw;
+  }
+  
 }
