--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -81,8 +81,8 @@ footer {
 
 #img-logo {
   max-width: 250px;
-  margin-left: 15px;
-  margin-top: 15px;
+  margin-left: 2vw;
+  margin-top: 2vh;
   -webkit-filter: drop-shadow(5px 5px 5px #fff);
   filter: drop-shadow(2px 5px 8px rgb(0, 0, 0));
 }
