--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -61,6 +61,7 @@ main {
 }
 
 .container_champ_nomes {
+  height: 100%;
   min-width: 25vw;
   display: flex;
   flex-direction: column;
@@ -72,9 +73,9 @@ main {
 
 .container_setas {
   max-width: 100%;
-  min-width: auto;
+  
   max-height: 20vh;
-  min-height: auto;
+  
   position: absolute;
   flex-direction: row;
   justify-content: center;
@@ -495,7 +496,8 @@ footer {
   }
 
   .container_champ_nomes {
-    min-height: 35vh;
+    min-width: 25vw;
+    min-height: 25vh;
     margin-left: 0vw;
   }
 
