--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -61,7 +61,7 @@ main {
 }
 
 .container_champ_nomes {
-  height: 100%;
+  height: 95%;
   min-width: 25vw;
   display: flex;
   flex-direction: column;
@@ -482,6 +482,11 @@ footer {
 }
 
 @media (max-width: 427px) {
+
+  header h1 {    
+    font-size: 6vh;
+  }
+
   .container_selection {
     flex-direction: column;
     justify-content: center;
